--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    <script src="myscript.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Get your movie details</title>
 </head>
